test/errors/importee-usestate-hook-wrong-init/code.js
import { useState } from "react";
/**
 * @__IMPORTABLE_HOOK__
 */

export default function useTestHook() {
  const a = {};
  useState(a);
}
